error exception file created
ok

--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <div class="container">
             <div class="row">
                 <div class="col-md-6 offset-md-3">
-                    <form action="op.jsp">
+                    <form action="Operation.jsp">
                     <div class="card">
                         <div class="card-header bg-dark text-white">
                             <h3>Provide two numbers</h3>
